[package]
name = "the-mule"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Orchestrate distributed peer integration tests"

[lib]
name = "the_mule"
path = "src/lib.rs"

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
ratatui = "0.29"
crossterm = "0.28"
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
