[package]
name = "the-mule"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Orchestrate distributed peer integration tests"

[lib]
name = "the_mule"
path = "src/lib.rs"

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
ratatui = "0.30"
redis = { version = "1.0", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
