[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the_mule"
version = "0.1.0"
description = "Client library for The Mule distributed test orchestrator"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
